open-policy-agent-gatekeeper/busybox-untrusted.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox
          command: [ "sh", "-c", "echo 'Sleeping for 1 hour'; sleep 3600" ]
