open-policy-agent-gatekeeper/ct-deny-automount-default-service-account.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: denyautomountdefaultserviceaccounttoken
spec:
  crd:
    spec:
      names:
        kind: DenyAutoMountDefaultServiceAccountToken
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package denyautomountdefaultserviceaccounttoken

        msg := "It's disallowed to auto-mount the default service account token, use another service account or set automountServiceAccountToken: false"

        # When you join multiple expressions together in a query you are expressing logical AND.
        # To express logical OR in Rego you define multiple rules with the same name.

        violation[{"msg": msg}] {
            input.review.object.kind == "Deployment"
            not deployment_compliant
        }

        violation[{"msg": msg}] {
            input.review.object.kind == "Pod"
            not pod_compliant
        }

        deployment_compliant = true {
            input.review.object.spec.template.spec.serviceAccountName != "default"
        }

        deployment_compliant = true {
            input.review.object.spec.template.spec.serviceAccountName == "default"
            input.review.object.spec.template.spec.automountServiceAccountToken == false
        }

        deployment_compliant = true {
            not input.review.object.spec.template.spec.serviceAccountName
            input.review.object.spec.template.spec.automountServiceAccountToken == false
        }

        pod_compliant = true {
        	input.review.object.spec.serviceAccountName != "default"
        }

        pod_compliant = true {
        	input.review.object.spec.serviceAccountName == "default"
            input.review.object.spec.automountServiceAccountToken == false
        }

        pod_compliant = true {
        	not input.review.object.spec.serviceAccountName
            input.review.object.spec.automountServiceAccountToken == false
        }
